[package]
name = "game2"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#inspector = ["bevy-inspector-egui"]
inspector = []


[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
# bevy = { version = "0.7" }

# bevy-inspector-egui = { version = "0.11", optional = true }
# bevy-inspector-egui-rapier = { version = "0.1", features = ["rapier3d"] }
bevy_egui = "0.15"
bevy_ecs_property = { version = "0.2", git = "https://github.com/sim82/bevy_crates" }
rand = "0.8"
num-traits = "0.2"
bevy_mod_picking = "0.7"
bevy_rapier3d = { version = "0.13", features = ["simd-stable"] }
multimap = "0.8"
